--- a/css/style.css
+++ b/css/style.css
@@ -26,19 +26,6 @@ img {
     background-color: #ffff;
 }
 
-.header .header-1 {
-    width: 100%;
-    height: 25px;
-    background-color: #CBA2A0;
-    display: flex;
-    justify-content: space-around;
-    align-items: center !important; 
-}
-
-.header-1 .header-1-txt {
-    font-size: 0.7rem;
-}
-
 .header-2 {
     width: 100%;
     height: 100px;
@@ -151,12 +138,11 @@ img {
     max-width: 1400px;
     display: flex;
     justify-content: space-around;
-    gap: 70px;
     padding: 0 50px;
 }
 
 .cards-fotos .card {
-    width: 30%;
+    width: 20%;
     max-width: 400px;
     display: flex;
     flex-direction: column;
@@ -164,8 +150,6 @@ img {
     background-color: #fff2f0;
     border-radius: 10px;
     cursor: pointer;
-    /* -webkit-box-shadow: 0px 50px 50px 0px rgba(54, 54, 54, 0.5);
-    -moz-box-shadow: 0px 50px 50px 0px rgba(54, 54, 54, 0.5); */
     box-shadow: 5px 5px 5px 5px rgba(196, 196, 196, 0.05);
     transition: 0.5s !important;
 }
@@ -176,7 +160,8 @@ img {
 
 .cards-fotos .card img {
     display: block;
-    width: 200px;
+    width: 100%;
+    border-radius: 10px;
     padding: 10px;  
 }
 
@@ -188,7 +173,7 @@ img {
 }
 
 .cards-fotos .card p {
-    padding: 20px 20px;
+    padding: 20px 30px;
     text-align: center;
     font-size: 0.9rem;
     color: #414141;
