--- a/css/style.css
+++ b/css/style.css
@@ -388,9 +388,9 @@ img {
         margin-bottom: 20px;
     }
 
-    .slider {
+    /* .slider {
         display: none;
-    }
+    } */
 
     .promocao img {
         width: 90%;
@@ -434,6 +434,8 @@ img {
     .indicacao {
         padding: 10px;
         margin-bottom: 30px;
+        flex-direction: column;
+        gap: 30px;
     }
 
     .indicacao-txt img {
